@@ -1,3 +1,7 @@
+2002-12-2  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/client.py: web client
+
 2002-11-30  Paul Swartz  <z3p@twistedmatrix.com>
 
 	* Summary of Conch changes:  An actual client (bin/conch) which is
